# DZ1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake
.github/workflows/: cmake.yml
Google_tests/: CMakeLists.txt  Makefile  test.cpp
Google_tests/answers/: answer2.txt  answer3.txt  answer4.txt  answer5.txt
Google_tests/tests/: answer1.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
bui/: CMakeCache.txt  Makefile  cmake_install.cmake
bui/Google_tests/: Makefile
bui/io/: Makefile  cmake_install.cmake
io/: CMakeLists.txt  Makefile  answer.txt  data.txt  skyscraperio.c  skyscraperio.h
src/: data.txt  skyscraperio.c  skyscraperio.h  source.c
